@@ -6,7 +6,8 @@ set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE TYPE INTERNAL FORCE )
 project (CrashRpt)
 
 # CrashRpt version number
-set (CRASHRPT_VER 1300)
+set (CRASHRPT_VER 1301)
+
 
 # Check supported generators
 if(NOT MSVC OR ${MSVC_VERSION} LESS 1310)
