@@ -67,11 +67,11 @@ void CMailMsg::SetFrom(CString sAddress)
     m_from = lpszAddress;
 }
 
-void CMailMsg::SetTo(CString sAddress)
+void CMailMsg::AddRecipient(CString sAddress)
 {
     strconv_t strconv;
     LPCSTR lpszAddress = strconv.t2a(sAddress.GetBuffer(0));
-    m_to = lpszAddress;
+	m_to.push_back(lpszAddress);
 }
 
 void CMailMsg::SetSubject(CString sSubject)
@@ -204,7 +204,7 @@ BOOL CMailMsg::Send()
     }
 
 
-    pRecipients = new MapiRecipDesc[2];
+    pRecipients = new MapiRecipDesc[1+m_to.size()];
     if(!pRecipients)
     {
         m_sErrorMsg = _T("Error allocating memory");
@@ -228,14 +228,17 @@ BOOL CMailMsg::Send()
     pRecipients[0].ulEIDSize = 0;
     pRecipients[0].lpEntryID = NULL;
 
-    // set to
-    pRecipients[1].ulReserved = 0;
-    pRecipients[1].ulRecipClass = MAPI_TO;
-    pRecipients[1].lpszAddress = (LPSTR)m_to.c_str();
-    pRecipients[1].lpszName = (LPSTR)m_to.c_str();
-    pRecipients[1].ulEIDSize = 0;
-    pRecipients[1].lpEntryID = NULL;
-
+	// set to
+	size_t i;
+	for(i=0; i<m_to.size(); i++)
+	{
+		pRecipients[i+1].ulReserved = 0;
+		pRecipients[i+1].ulRecipClass = MAPI_TO;
+		pRecipients[i+1].lpszAddress = (LPSTR)m_to[i].c_str();
+		pRecipients[i+1].lpszName = (LPSTR)m_to[i].c_str();
+		pRecipients[i+1].ulEIDSize = 0;
+		pRecipients[i+1].lpEntryID = NULL;
+	}
 
     // add attachments
     nIndex=0;   
@@ -258,7 +261,7 @@ BOOL CMailMsg::Send()
     message.lpszConversationID                = NULL;
     message.flFlags                           = 0;
     message.lpOriginator                      = pRecipients;
-    message.nRecipCount                       = 1;
+	message.nRecipCount                       = m_to.size();
     message.lpRecips                          = &pRecipients[1];
     message.nFileCount                        = nAttachments;
     message.lpFiles                           = nAttachments ? pAttachments : NULL;
